changed calc-height to prevent scrollbar

--- a/src/app/info-box/terra-info-box.component.scss
+++ b/src/app/info-box/terra-info-box.component.scss
@@ -22,7 +22,7 @@
 {
     display: flex;
     justify-content: space-between;
-    height: calc(100% - 25px);
+    height: calc(100% - 26px);
 }
 
 .info-box-text
